2021/demo-istio/demo-server/demo-server-deployment-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: demo-server-production
 namespace: netscout-istio-demo
 labels:
  app: demo-server
  version: production
spec:
 replicas: 2
 selector:
  matchLabels:
   app: demo-server
   version: production
 template:
  metadata:
   labels:
    app: demo-server
    version: production
  spec:
   containers:
   - name: demo-server
     image: 134048686860.dkr.ecr.us-west-2.amazonaws.com/demo-server:production
     ports:
     - containerPort: 80
