2021/demo-istio/demo-server/demo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: demo-server-v1
 namespace: jeevan-namespace
 labels:
  app: demo-server
spec:
 selector:
  app: demo-server
 ports:
 - name: http
   port: 80
