2021/demo-istio/demo-server/demo-server-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-server-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-server
  namespace: jeevan-namespace
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/demo-server-gateway
  http:
  - match:
    - uri:
        exact: /server
    route:
    - destination:
        host: demo-server-v1
        port:
          number: 80
