2021/demo-istio/demo-server/demo-server-mirroring.yaml
#H-H-R-D-M (H-S)
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: demo-server-virtual-service
 namespace: netscout-istio-demo
spec:
 hosts:
 - demo-server-service.netscout-istio-demo.svc.cluster.local
 http:
 - route:
   - destination:
      host: demo-server-service.netscout-istio-demo.svc.cluster.local
      subset: production
     weight: 100
   mirror:
    host: demo-server-service.netscout-istio-demo.svc.cluster.local
    subset: development
   mirror_percent: 100

---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: demo-server-destination-rule
 namespace: netscout-istio-demo
spec:
 host: demo-server-service.netscout-istio-demo.svc.cluster.local
 subsets:
 - name: production
   labels:
    version: production
 - name: development
   labels:
    version: development
